--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="features">
                 <h2 class="fw-regular">Features</h2>
                 <p>Most Calendars are designed for teams, Slate is designed for freelancers</p>
-                <img class="hide-for-desktop videoscreen" src="/images/videoscreen_mobile.png">
+                <img class="hide-for-desktop videoscreen" src="images/videoscreen_mobile.png">
                 <div class="features__items">
                     <div>
                         <img src="svg/item1.png">
@@ -81,7 +81,7 @@
                             financial goal.</p>
                     </div>
                 </div>
-                <img class="hide-for-mobile videoscreen" src="/images/videoscreen_desktop.png">
+                <img class="hide-for-mobile videoscreen" src="images/videoscreen_desktop.png">
 
         </section>
 
@@ -94,18 +94,18 @@
 
                 <a href="#" class="btn">Try For Free</a>
             </div>
-            <img src="/images/macbook_mobile.png" alt="macbook">
+            <img src="images/macbook_mobile.png" alt="macbook">
         </section>
 
         <section class="newsletter">
-            <img class="hide-for-mobile" src="/images/newsletter_mobile.png" alt="">
+            <img class="hide-for-mobile" src="images/newsletter_mobile.png" alt="">
             <div>
                 <div>
                     <p class="fw-bold">At your fingertips</p>
                     <h2>Newsletter</h2>
                     <p>Most calendars are </p>
                 </div>  
-                <img class="hide-for-desktop" src="/images/newsletter_mobile.png" alt="">
+                <img class="hide-for-desktop" src="images/newsletter_mobile.png" alt="">
                 <div>
                     <p class="fw-bold">Subscribe to our newletter</p>
                     <p>Available exclusively on FigmaLand</p>
@@ -128,19 +128,19 @@
             <div class="partners">
                 <div class="partners_cards">
                     <p>Amazon</p>
-                    <img src="/images/amazon.png" alt="amazon">
+                    <img src="images/amazon.png" alt="amazon">
                 </div>
                 <div class="partners_cards">
                     <p>Dropbox</p>
-                    <img src="/images/dropbox.png" alt="dropbox">
+                    <img src="images/dropbox.png" alt="dropbox">
                 </div>
                 <div class="partners_cards">
                     <p>Google</p>
-                    <img src="/images/google.png" alt="google">
+                    <img src="images/google.png" alt="google">
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Microsoft</p>
-                    <img src="/images/microsoft.png" alt="microsoft">
+                    <img src="images/microsoft.png" alt="microsoft">
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Uber</p>
@@ -148,31 +148,31 @@
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Amazon</p>
-                    <img src="/images/amazon.png" alt="amazon">
+                    <img src="images/amazon.png" alt="amazon">
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Dropbox</p>
-                    <img src="/images/dropbox.png" alt="dropbox">
+                    <img src="images/dropbox.png" alt="dropbox">
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Google</p>
-                    <img src="/images/google.png" alt="google">
+                    <img src="images/google.png" alt="google">
                 </div>
                 <div class="hide-for-mobile partners_cards">
                     <p>Microsoft</p>
-                    <img src="/images/microsoft.png" alt="microsoft">
+                    <img src="images/microsoft.png" alt="microsoft">
                 </div>
             </div>
             <a href="#" class="btn">Try For Free</a>
         </section>
         <section class="testimonials">
             <h2>Testimonials</h2>
-            <img src="/images/ibm.png">
+            <img src="images/ibm.png">
             <p>Most calendars are designed for teams. 
                 Slate is designed for freelancers who want a 
                 simple way to plan their schedule.</p>
             <div>
-                <img src="/images/testimo.png" alt="">
+                <img src="images/testimo.png" alt="">
                 <div>
                     <p>Organizer Across</p>
                     <p>Ui Designer</p>
@@ -240,12 +240,12 @@
             <p class="hide-for-mobile">Slate is Designed for freelancers</p>
             <div class="contact__column">
                 <div class="contact__info">
-                    <img src="/images/location.png">
+                    <img src="images/location.png">
                     <p>6386 Spring St undefined Anchorage, 
                         Georgia 12473 United States</p>
                     <img src="images/phone.png">
                     <p>(843) 555-0130</p>
-                    <img src="/images/email.png">
+                    <img src="images/email.png">
                     <p>willie.jennings@example.com</p>
                 </div>
                 <div class="map hide-for-mobile">
@@ -298,7 +298,7 @@
                     </div>
             </div>
             <div class="contact__info">
-                    <img src="/images/location.png">
+                    <img src="images/location.png">
                     <p>6386 Spring St undefined Anchorage, 
                         Georgia 12473 United States</p>
                     <img src="images/phone.png">
