--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
                     <img src="images/phone.png">
                     <p>(843) 555-0130</p>
                     <div>
-                        <img src="/svg/twitter.svg" alt="twiter">
-                        <img src="/svg/fb.svg" alt="facebook">
-                        <img src="/svg/linkedin.svg" alt="linkedin">
+                        <img src="svg/twitter.svg" alt="twiter">
+                        <img src="svg/fb.svg" alt="facebook">
+                        <img src="svg/linkedin.svg" alt="linkedin">
                     </div>
 
                 </div>
