--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p class="subtitle">Most calendars are designed for teams. 
                     <span class="hide-for-mobile">Slate is designed for freelancers</span></p>
             </div>
-            <div class="partners">
+            <div class="partners partners2">
                 <div class="partners_cards">
                     <p>Amazon</p>
                     <img src="images/amazon.png" alt="amazon">
