button looks good

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font/Graphik/stylesheet.css">
     
+
+
     <title>FigmaLand</title>
 </head>
 <body>
@@ -14,6 +16,13 @@
         <header class="menu">
             <nav>
                 <div class="links hide-for-mobile">
+                    <a href="#">Home</a>
+                    <a href="#features">Product</a>
+                    <a href="#pricing">Pricing</a>
+                    <a href="#testimonials">About</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="links_mobile hide-for-desktop">
                     <a href="#">Home</a>
                     <a href="#features">Product</a>
                     <a href="#pricing">Pricing</a>
